added many to many relationship. updated swagger
