# app/Http/Controllers/MusicController.php
@@ -2,11 +2,12 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Resources\MusicCollection;
-use App\Http\Resources\MusicResource;
 use App\Models\Music;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
+use App\Http\Resources\MusicResource;
+use App\Http\Resources\MusicCollection;
+use App\Http\Requests\StoreMusicRequest;
 
 //Music Contoller page to display the Get, Update and Delete methods on Swagger
 
@@ -41,7 +42,12 @@ class MusicController extends Controller
     //Gets all music/songs
     {
         // return new MusicCollection(Music::all());
-        return new MusicCollection(Music::with('artist')->get());
+
+        //eager loading
+        //the code below, will get all music with artists (one to many) and genres (many to many)
+        return new MusicCollection(Music::with('artist')
+            ->with('genres')
+            ->get());
     }
 
     ///////////////////////////////////////////////////////////////////
@@ -55,15 +61,17 @@ class MusicController extends Controller
      *      tags={"Songs"},
      *      summary="Create a new song",
      *      description="Stores the song in the DB",
+     *      security={{"bearerAuth":{}}},
      *      @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
      *            required={"title", "album", "artist", "genre", "rating"},
      *            @OA\Property(property="title", type="string", format="string", example="Track Title"),
      *            @OA\Property(property="album", type="string", format="string", example="Album Title"),
-     *            @OA\Property(property="artist", type="string", format="string", example="Artist's Name"),
-     *            @OA\Property(property="genre", type="string", format="string", example="Pop, Rock, Indie etc.."),
-     *            @OA\Property(property="rating", type="integer", format="integer", example="1-10")
+     *            @OA\Property(property="artist", type="string", format="string", example="Name"),
+     *            @OA\Property(property="rating", type="integer", format="integer", example="8"),
+     *            @OA\Property(property="artist_id", type="integer", format="integer", example="10"),
+     *            @OA\Property(property="genres", type="integer", format="integer", example="[1,2]")
      *          )
      *      ),
      *     @OA\Response(
@@ -78,16 +86,22 @@ class MusicController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\MusicResource
      */
-    public function store(Request $request)
+    //store accept StoreMusicRequest and executes the validation rules
+    public function store(StoreMusicRequest $request)
     //creates new music/songs
     {
         $music = Music::create([
             'title' => $request->title,
             'album' => $request->album,
-            'genre' => $request->genre,
+            // 'genre' => $request->genre,
             'rating' => $request->rating,
             'artist_id' => $request->artist_id
         ]);
+
+        //$music->genres() calls the belongsToMany function in the music model.
+        $music->genres()->attach($request->genres);
+
+        //calls for validation rules
         return new MusicResource($music);
     }
 
@@ -132,7 +146,42 @@ class MusicController extends Controller
     ///////////////////////////////////////////////////////////////////
 
     /**
-     * Update a song in storage.
+     * Store a newly created song in storage.
+     *
+     * @OA\Put(
+     *      path="/api/musics/{id}",
+     *      operationId="put",
+     *      tags={"Songs"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Music id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer")
+     *          ),
+     *      summary="Update a song",
+     *      description="Stores the song in the DB",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"title", "album", "artist", "genre", "rating"},
+     *            @OA\Property(property="title", type="string", format="string", example="Track Title"),
+     *            @OA\Property(property="album", type="string", format="string", example="Album Title"),
+     *            @OA\Property(property="rating", type="integer", format="integer", example="8"),
+     *            @OA\Property(property="artist_id", type="integer", format="integer", example="10"),
+     *            @OA\Property(property="genres", type="integer", format="integer", example="[1,2]")
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200, description="Success",
+     *          @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=""),
+     *             @OA\Property(property="data",type="object")
+     *          )
+     *     )
+     * )
      *
      * @param  \Illuminate\Http\Request  $request
      * @param  \App\Models\Music  $music
@@ -142,8 +191,10 @@ class MusicController extends Controller
     //updates music/songs
     {
         $music->update($request->only([
-            'title', 'album', 'genre', 'rating', 'artist_id'
+            'title', 'album', 'rating', 'artist_id'
         ]));
+
+        $music->genres()->attach($request->genres);
 
         return new MusicResource($music);
     }
@@ -159,6 +210,7 @@ class MusicController extends Controller
      *    tags={"Songs"},
      *    summary="Delete Music",
      *    description="Delete Music",
+     *    security={{"bearerAuth":{}}},
      *    @OA\Parameter(name="id", in="path", description="Id of a song", required=true,
      *        @OA\Schema(type="integer")
      *    ),
